--- a/stylesheets/css/ie.css
+++ b/stylesheets/css/ie.css
@@ -1,7 +1,7 @@
 .reset-dimensions{margin:0;padding:0;}
 .incomplete{background-color:rgba(255, 0, 255, 0);}
 .show-bounds{background-color:rgba(255, 255, 0, 0.5);}
-#content.home #content_secondary .post.item-3,#content.home #content_tertiary .post.item-3{margin-right:0;}
+#content.home #content_secondary .post.post-4,#content.home #content_tertiary .post.post-4{margin-right:0;}
 #page_footer .item-0,#page_footer .item-4,#page_footer .item-8{clear:left;width:330px;}
 #page_footer .item-3,#page_footer .item-7,#page_footer .item-11{margin-right:0;}
 #page_heel .item-0,#page_heel .item-4,#page_heel .item-8{clear:left;width:330px;}
