--- a/stylesheets/less/colorbox.less
+++ b/stylesheets/less/colorbox.less
@@ -1,5 +1,5 @@
 @import "variables";
-
+@media screen, projection {
 /*
     ColorBox Core Style
     The following rules are the styles that are consistant between themes.
@@ -62,4 +62,4 @@
 			border-bottom:1px solid @color_midtone;
 		}
         #cboxClose.hover{ }
-
+}
