--- a/stylesheets/less/sprites.less
+++ b/stylesheets/less/sprites.less
@@ -1,107 +1,109 @@
 @import "variables";
 
-.sprite {
-	display:block;
-}
-.sprite.vimeo {
-	width:30px;
-	height:26px;
-	.sprite-background(0px, -150px);
-}
-.sprite.twitter {
-	width:23px;
-	height:30px;
-	.sprite-background(-60px, -150px);
-}
-.sprite.tumblr {
-	width:19px;
-	height:30px;
-	.sprite-background(-110px, -150px);
-}
-.sprite.facebook {
-	width:14px;
-	height:30px;
-	.sprite-background(-150px, -150px);
-}
-.sprite.flickr {
-	width:30px;
-	height:15px;
-	.sprite-background(-190px, -150px);
-}
-.sprite.git {
-	width:28px;
-	height:30px;
-	.sprite-background(-240px, -150px);
-}
-.sprite.friendfeed {
-	width:28px;
-	height:30px;
-	.sprite-background(-340px, -150px);
-}
+@media screen, projection {
+	.sprite {
+		display:block;
+	}
+	.sprite.vimeo {
+		width:30px;
+		height:26px;
+		.sprite-background(0px, -150px);
+	}
+	.sprite.twitter {
+		width:23px;
+		height:30px;
+		.sprite-background(-60px, -150px);
+	}
+	.sprite.tumblr {
+		width:19px;
+		height:30px;
+		.sprite-background(-110px, -150px);
+	}
+	.sprite.facebook {
+		width:14px;
+		height:30px;
+		.sprite-background(-150px, -150px);
+	}
+	.sprite.flickr {
+		width:30px;
+		height:15px;
+		.sprite-background(-190px, -150px);
+	}
+	.sprite.git {
+		width:28px;
+		height:30px;
+		.sprite-background(-240px, -150px);
+	}
+	.sprite.friendfeed {
+		width:28px;
+		height:30px;
+		.sprite-background(-340px, -150px);
+	}
 
-.sprite.vimeo-light-50 {
-	width:50px;
-	height:43px;
-	.sprite-background(0px, -30px);
-}
-.sprite.twitter-light-50 {
-	width:37px;
-	height:50px;
-	.sprite-background(-70px, -30px);
-}
-.sprite.tumblr-light-50 {
-	width:31px;
-	height:50px;
-	.sprite-background(-130px, -30px);
-}
-.sprite.facebook-light-50 {
-	width:23px;
-	height:50px;
-	.sprite-background(-240px, -30px);
-}
-.sprite.flickr-light-50 {
-	width:50px;
-	height:25px;
-	.sprite-background(-180px, -200px);
-}
-.sprite.git-light-50 {
-	width:46px;
-	height:50px;
-	.sprite-background(-290px, -200px);
-}
+	.sprite.vimeo-light-50 {
+		width:50px;
+		height:43px;
+		.sprite-background(0px, -30px);
+	}
+	.sprite.twitter-light-50 {
+		width:37px;
+		height:50px;
+		.sprite-background(-70px, -30px);
+	}
+	.sprite.tumblr-light-50 {
+		width:31px;
+		height:50px;
+		.sprite-background(-130px, -30px);
+	}
+	.sprite.facebook-light-50 {
+		width:23px;
+		height:50px;
+		.sprite-background(-240px, -30px);
+	}
+	.sprite.flickr-light-50 {
+		width:50px;
+		height:25px;
+		.sprite-background(-180px, -200px);
+	}
+	.sprite.git-light-50 {
+		width:46px;
+		height:50px;
+		.sprite-background(-290px, -200px);
+	}
 
-.sprite.vimeo-light-30 {
-	width:30px;
-	height:26px;
-	.sprite-background(0px, -100px);
-}
-.sprite.twitter-light-30 {
-	width:23px;
-	height:30px;
-	.sprite-background(-60px, -100px);
-}
-.sprite.tumblr-light-30 {
-	width:19px;
-	height:30px;
-	.sprite-background(-110px, -100px);
-}
-.sprite.facebook-light-30 {
-	width:14px;
-	height:30px;
-	.sprite-background(-150px, -100px);
-}
-.sprite.flickr-light-30 {
-	width:30px;
-	height:15px;
-	.sprite-background(-190px, -100px);
-}
-.sprite.git-light-30 {
-	width:28px;
-	height:30px;
-	.sprite-background(-240px, -100px);
-}
-.sprite.rss-light-30 {
-	width:30px;
-	height:30px;
-	.sprite-background(-290px, -100px);
+	.sprite.vimeo-light-30 {
+		width:30px;
+		height:26px;
+		.sprite-background(0px, -100px);
+	}
+	.sprite.twitter-light-30 {
+		width:23px;
+		height:30px;
+		.sprite-background(-60px, -100px);
+	}
+	.sprite.tumblr-light-30 {
+		width:19px;
+		height:30px;
+		.sprite-background(-110px, -100px);
+	}
+	.sprite.facebook-light-30 {
+		width:14px;
+		height:30px;
+		.sprite-background(-150px, -100px);
+	}
+	.sprite.flickr-light-30 {
+		width:30px;
+		height:15px;
+		.sprite-background(-190px, -100px);
+	}
+	.sprite.git-light-30 {
+		width:28px;
+		height:30px;
+		.sprite-background(-240px, -100px);
+	}
+	.sprite.rss-light-30 {
+		width:30px;
+		height:30px;
+		.sprite-background(-290px, -100px);
+	}
 }
