--- a/stylesheets/css/mobile.css
+++ b/stylesheets/css/mobile.css
@@ -1,3 +1,4 @@
 .reset-dimensions{margin:0;padding:0;}
 .incomplete{background-color:rgba(255, 0, 255, 0);}
 .show-bounds{background-color:rgba(255, 255, 0, 0.5);}
+@media screen, projection{#sticky_footer{position:static;}}
