--- a/stylesheets/less/archive.less
+++ b/stylesheets/less/archive.less
@@ -1,27 +1,28 @@
 @import "variables";
-
-#content.archive {
-	header {
-		margin-bottom:@row-height*2;
-		h1 {
-			margin-bottom:0;
-		}
-		h2 {
-			margin-top:0;
-			color:@color_midtone;
-		}
-	}
-	article {
+@media screen, projection {
+	#content.archive {
 		header {
+			margin-bottom:@row-height*2;
 			h1 {
-				font-size:22px;
+				margin-bottom:0;
+			}
+			h2 {
+				margin-top:0;
+				color:@color_midtone;
 			}
 		}
-	}
-	.post {
-		margin-bottom:@row-height*4;
-	}
-	.post:last-child {
-		margin-bottom:@row-height;
+		article {
+			header {
+				h1 {
+					font-size:22px;
+				}
+			}
+		}
+		.post {
+			margin-bottom:@row-height*4;
+		}
+		.post:last-child {
+			margin-bottom:@row-height;
+		}
 	}
 }
