--- a/stylesheets/less/header.less
+++ b/stylesheets/less/header.less
@@ -1,89 +1,91 @@
 @import "variables";
 
-#page_header { 
-	border-bottom:1px dotted @color_midtone;
-	position: relative;
-	h1 {
-		font-size:16px;
-		margin-bottom:5px;
-		a {
-			text-decoration:none;
+@media screen, projection {
+	#page_header { 
+		border-bottom:1px dotted @color_midtone;
+		position: relative;
+		h1 {
+			font-size:16px;
+			margin-bottom:5px;
+			a {
+				text-decoration:none;
+			}
+		}
+	
+		hgroup {
+			margin-top: 0px; 
+		}
+	
+		nav {
+			display:block;
+			float:left;
+			width:750px;
+			padding-bottom:5px;
+			margin-bottom:5px;
+			.menu ul {
+				float: left;
+				list-style: none;
+				.reset-dimensions;
+				display:block;
+				ul {
+					display:none;
+				}
+			
+				li:before {
+					content:'';
+				}
+				li {
+					.reset-dimensions;
+					float: left;
+					margin-right: 30px;
+					background: none;
+					a {
+						display: block;
+						text-decoration: none;
+						height:(@row-height);
+						color: @color_off_black;
+						font-size: 11px;
+						padding-top:0;
+					
+					}
+					a:hover {
+						color:@color_midtone;
+					}
+				}
+				li.last {
+					margin-right: 0;
+				}
+			}	
 		}
 	}
-	
-	hgroup {
-		margin-top: 0px; 
+
+	#search {
+		float:right;
+		#search_button { display:none; }
+		#search_form input { width:190px; font-size:11px; }
 	}
-	
-	nav {
-		display:block;
-		float:left;
-		width:750px;
-		padding-bottom:5px;
-		margin-bottom:5px;
-		.menu ul {
-			float: left;
-			list-style: none;
-			.reset-dimensions;
-			display:block;
-			ul {
-				display:none;
-			}
-			
-			li:before {
-				content:'';
-			}
-			li {
-				.reset-dimensions;
-				float: left;
-				margin-right: 30px;
-				background: none;
-				a {
-					display: block;
-					text-decoration: none;
-					height:(@row-height);
-					color: @color_off_black;
-					font-size: 11px;
-					padding-top:0;
-					
-				}
-				a:hover {
-					color:@color_midtone;
-				}
-			}
-			li.last {
-				margin-right: 0;
-			}
+
+	#sub_header {
+		margin-top:5px;
+		border-bottom:@border-break;
+		p {
+			font-size:11px;
+			color:@color_midtone;
+			line-height:@row-height;
+			margin-top:0;
+		}
+		.widget {
+			float:left;
+			margin-right:20px;
+			width:190px;
+			margin-bottom:(@row-height);
+		}
+		.widget:nth-child(4n+1) {
+			width:330px;
+			clear:left;
+		}
+		.widget:nth-child(4n) {
+			margin-right:0;
 		}	
 	}
-}
-
-#search {
-	float:right;
-	#search_button { display:none; }
-	#search_form input { width:190px; font-size:11px; }
-}
-
-#sub_header {
-	margin-top:5px;
-	border-bottom:@border-break;
-	p {
-		font-size:11px;
-		color:@color_midtone;
-		line-height:@row-height;
-		margin-top:0;
-	}
-	.widget {
-		float:left;
-		margin-right:20px;
-		width:190px;
-		margin-bottom:(@row-height);
-	}
-	.widget:nth-child(4n+1) {
-		width:330px;
-		clear:left;
-	}
-	.widget:nth-child(4n) {
-		margin-right:0;
-	}	
 }
