--- a/stylesheets/less/images.less
+++ b/stylesheets/less/images.less
@@ -1,7 +1,8 @@
 @import "variables";
-
-/*TODO: Fix placement image*/
-.gravatar img {
-	margin-top:9px;
-	background: url(../../images/placeholder_50x50.gif) no-repeat;
+@media screen, projection {
+	/*TODO: Fix placement image*/
+	.gravatar img {
+		margin-top:9px;
+		background: url(../../images/placeholder_50x50.gif) no-repeat;
+	}
 }
