--- a/stylesheets/less/sidebar.less
+++ b/stylesheets/less/sidebar.less
@@ -1,56 +1,58 @@
 @import "variables";
 
-#sidebar {
-	.opacity(.5);
-	background: rgba(254,250,250,0);
-	position: absolute;
-	right: 0px;
-	top: 0px;
-	overflow:hidden;
-	height:auto;
-	border-left: 1px solid @color_highlight;
-	border-right:0;
-	z-index:100;
-	.container {
-		position: relative;
-		left: 0;
-		float: right;
+@media screen, projection {
+	#sidebar {
+		.opacity(.5);
+		background: rgba(254,250,250,0);
+		position: absolute;
+		right: 0px;
+		top: 0px;
+		overflow:hidden;
+		height:auto;
+		border-left: 1px solid @color_highlight;
+		border-right:0;
+		z-index:100;
+		.container {
+			position: relative;
+			left: 0;
+			float: right;
+		}
+		h3 {
+			font-weight:bold;
+			font-size:13px;
+			margin-bottom:5px;
+		}
+		h3:first-child {
+			margin-top: 0 !important;
+		}
+		.container {
+			padding-top:@row-height;
+		}
 	}
-	h3 {
-		font-weight:bold;
-		font-size:13px;
-		margin-bottom:5px;
+	#sidebar:hover {
+		.opacity(1);
+		.columns(6);
+		padding-left:20px;
+		height:100%;
+		background: rgba(254,250,250,.94);
+		border-left:1px solid @color_midtone;
 	}
-	h3:first-child {
-		margin-top: 0 !important;
-	}
-	.container {
-		padding-top:@row-height;
-	}
-}
-#sidebar:hover {
-	.opacity(1);
-	.columns(6);
-	padding-left:20px;
-	height:100%;
-	background: rgba(254,250,250,.94);
-	border-left:1px solid @color_midtone;
-}
 
-#faux_sidebar {
-	.columns(3);
-	overflow:hidden;
-	visibility:hidden;
-	float:left;
-	h3 {
-		font-weight:bold;
-		font-size:13px;
-		margin-bottom:5px;
-	}
-	h3:first-child {
-		margin-top: 0 !important;
-	}
-	.container {
-		padding-top:@row-height;
+	#faux_sidebar {
+		.columns(3);
+		overflow:hidden;
+		visibility:hidden;
+		float:left;
+		h3 {
+			font-weight:bold;
+			font-size:13px;
+			margin-bottom:5px;
+		}
+		h3:first-child {
+			margin-top: 0 !important;
+		}
+		.container {
+			padding-top:@row-height;
+		}
 	}
 }
