--- a/stylesheets/less/transitions.less
+++ b/stylesheets/less/transitions.less
@@ -48,6 +48,13 @@
 	-o-transition: all .3s cubic-bezier(0.02, 0, 0.18, 1.0);
 }
 
+#content_aside {
+	-webkit-transition: all .3s cubic-bezier(0.02, 0, 0.18, 1.0); 
+	-moz-transition: all .3s cubic-bezier(0.02, 0, 0.18, 1.0); 
+	-o-transition: all .3s cubic-bezier(0.02, 0, 0.18, 1.0);
+}
+
+
 
 a{
 	-webkit-transition-property: background, color;
