--- a/stylesheets/less/iconic.less
+++ b/stylesheets/less/iconic.less
@@ -1,9 +1,11 @@
+@import "variables";
+
 @font-face {
-  font-family: 'IconicStroke';
-	src: url("../../fonts/iconic_stroke.eot");
-	src: local('IconicStroke'),
-		url("../../fonts/iconic_stroke.svg#iconic") format('svg'),
-		url("../../fonts/iconic_stroke.ttf") format('truetype');	   
+	font-family: 'IconicStrokeRegular';
+	src: url("../../fonts/iconic_stroke-webfont.eot");
+	src: local('☺'), url('../../fonts/iconic_stroke-webfont.woff') format('woff'), url('../../fonts/iconic_stroke-webfont.ttf') format('truetype'), url('../../fonts/iconic_stroke-webfont.svgz#webfontzGaFcuFj') format('svg'), url('../../fonts/iconic_stroke-webfont.svg#webfontzGaFcuFj') format('svg');
+	font-weight: normal;
+	font-style: normal;
 }
 
 .iconic {
@@ -12,7 +14,7 @@
 
 .iconic {
 	color:inherit;
-	font-family: "IconicStroke";
+	font-family: "IconicStrokeRegular";
 }
 
 .iconic {
