--- a/stylesheets/less/transitions.less
+++ b/stylesheets/less/transitions.less
@@ -25,9 +25,9 @@
 }
 
 #sticky_footer {
-	-webkit-transition: all .5s cubic-bezier(0.02, 0, 0.18, 1.0); 
-	-moz-transition: all .5s cubic-bezier(0.02, 0, 0.18, 1.0); 
-	-o-transition: all .5s cubic-bezier(0.02, 0, 0.18, 1.0); 
+	-webkit-transition: background-color .5s cubic-bezier(0.02, 0, 0.18, 1.0); 
+	-moz-transition: background-color .5s cubic-bezier(0.02, 0, 0.18, 1.0); 
+	-o-transition: background-color .5s cubic-bezier(0.02, 0, 0.18, 1.0); 
 	
 	.widget {
 		-webkit-transition: all .75s cubic-bezier(0.02, 0, 0.18, 1.0); 
@@ -52,22 +52,6 @@
 	-webkit-transition: all .3s cubic-bezier(0.02, 0, 0.18, 1.0); 
 	-moz-transition: all .3s cubic-bezier(0.02, 0, 0.18, 1.0); 
 	-o-transition: all .3s cubic-bezier(0.02, 0, 0.18, 1.0);
-}
-
-
-
-a{
-	-webkit-transition-property: background, color;
-	-webkit-transition-duration: .3s;
-	-webkit-transition-timing-function: cubic-bezier(0.02, 0, 0.18, 1.0);
-	
-	-moz-transition-property: background, color;
-	-moz-transition-duration: .3s;
-	-moz-transition-timing-function: cubic-bezier(0.02, 0, 0.18, 1.0);
-	
-	-o-transition-property: background, color;
-	-o-transition-duration: .3s;
-	-o-transition-timing-function: cubic-bezier(0.02, 0, 0.18, 1.0);
 }
 
 #content.home .post footer .metadata {
