--- a/stylesheets/less/variables.less
+++ b/stylesheets/less/variables.less
@@ -1,5 +1,3 @@
-@root_url:"http://localhost/wordpress";
-
 @color_accent: 		#ff1e00;
 @color_highlight: 	#fefafa;
 @color_light: 		#f0eceb;
@@ -7,9 +5,8 @@
 @color_dark: 		#3d302f;
 @color_off_black: 	#050000;
 
-@sans-serif:"news-gothic-std-1","news-gothic-std-2", 'ff-dagny-web-pro-1', 'ff-dagny-web-pro-2', 'Helvetica Neue', Arial, Helvetica, Geneva, sans-serif;
-@sans-serif-alt:'Helvetica Neue', Arial, Helvetica, Geneva, sans-serif;
-@serif:"adrianne-1","adrianne-2", 'ff-meta-serif-web-pro-1','ff-meta-serif-web-pro-2', Georgia, "Times New Roman", Times, serif;
+@sans-serif:'Helvetica Neue', Arial, Helvetica, Geneva, sans-serif;
+@serif:Georgia, "Times New Roman", Times, serif;
 
 @thin:100;
 @extra-light:200;
