Commit before systemic changes

--- a/stylesheets/less/global.less
+++ b/stylesheets/less/global.less
@@ -221,7 +221,7 @@
 			section {
 				margin-bottom:@row-height;
 				font-size:17px;
-				ul li, ol li, code {
+				ul li, ol li, code, dt, dd {
 					font-size:17px;
 					line-height:@row-height*2;
 				} 
