--- a/stylesheets/less/index.less
+++ b/stylesheets/less/index.less
@@ -63,6 +63,49 @@
 				}
 			}
 		}
+		
+		.content.twoup {
+			.post.active {
+				.metadata {
+					.opacity(1);
+				}
+			}
+			.post {
+				margin-top:5px;
+				position:relative;
+				float:left;
+				margin-right:@gutter-width;
+				header {
+					.reset-dimensions;
+					h1 {
+						.reset-dimensions;
+						font-size: 13px;
+						line-height:(@row-height*2);
+						font-weight:bold;
+						a { text-decoration:none; }
+					}
+				}
+				.metadata { .opacity(0); }
+				section  {
+					margin-top:5px;
+					font-family:@serif;
+					font-size: 13px;
+					p {
+					
+						padding-bottom:0;
+					}
+				}
+			}
+			.post:nth-child(2n) { margin-right:0; }
+			.post:nth-child(n+3) {
+				margin-top:0;
+			}
+			
+			img {
+				.drop-shadow(0px, 2px, 7px, rgba(158, 136, 134,0.6));
+			}
+			
+		}
 
 		.content.fourup {
 			.post.active {
@@ -100,12 +143,11 @@
 			.post:nth-child(n+5) {
 				margin-top:0;
 			}
-		}
-		
-		.content.fourup {
+			
 			img {
 				.drop-shadow(0px, 2px, 7px, rgba(158, 136, 134,0.6));
 			}
+			
 		}
 	
 	
