--- a/stylesheets/less/mobile.less
+++ b/stylesheets/less/mobile.less
@@ -1,6 +1,18 @@
 @import "variables";
 
-@media screen, projection {
+/*
+ * Based on http://mislav.uniqpath.com/2010/04/targeted-css/
+*/
+
+@media only screen and (device-width: 768px) {
+	/*iPad*/
+	#sticky_footer {
+		position:static;
+	}
+}
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+  /* iPhone/Android*/
 	#sticky_footer {
 		position:static;
 	}
